(doc)packagejson update for yelpApi

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^4.4.17",
     "morgan": "^1.7.0",
     "q": "^1.4.1",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "yelp": "^1.0.1"
   }
 }
