--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,10 @@
     "angular": "~1.2.18",
     "angular-route": "~1.2.18",
     "angular-mocks": "~1.2.18",
-    "jquery": "~2.2.4"
+    "jquery": "~2.2.4",
+    "angular-sanitize": "~1.5.6"
+  },
+  "resolutions": {
+    "angular": "~1.2.18"
   }
 }
