--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall":"bower install"
+    "postinstall": "bower install"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/CharliesAngulars/CharliesAngulars#readme",
   "dependencies": {
     "body-parser": "^1.15.1",
+    "bower": "^1.7.9",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "grunt": "^1.0.1",
