--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/CharliesAngulars/CharliesAngulars#readme",
   "dependencies": {
+    "axios": "^0.11.1",
     "body-parser": "^1.15.1",
     "bower": "^1.7.9",
     "express": "^4.13.4",
